@@ -93,19 +93,7 @@ static void _pauseThread(struct GBAThread* threadContext, bool onThread) {
 		_waitUntilNotState(threadContext, THREAD_PAUSING);
 	}
 }
-#endif
 
-static void _changeVideoSync(struct GBASync* sync, bool frameOn) {
-	// Make sure the video thread can process events while the GBA thread is paused
-	MutexLock(&sync->videoFrameMutex);
-	if (frameOn != sync->videoFrameOn) {
-		sync->videoFrameOn = frameOn;
-		ConditionWake(&sync->videoFrameAvailableCond);
-	}
-	MutexUnlock(&sync->videoFrameMutex);
-}
-
-#ifndef DISABLE_THREADING
 static THREAD_ENTRY _GBAThreadRun(void* context) {
 #ifdef USE_PTHREADS
 	pthread_once(&_contextOnce, _createTLS);
@@ -631,7 +619,7 @@ void GBAThreadPause(struct GBAThread* threadContext) {
 	}
 	MutexUnlock(&threadContext->stateMutex);
 
-	_changeVideoSync(&threadContext->sync, frameOn);
+	GBASyncSetVideoSync(&threadContext->sync, frameOn);
 }
 
 void GBAThreadUnpause(struct GBAThread* threadContext) {
@@ -645,7 +633,7 @@ void GBAThreadUnpause(struct GBAThread* threadContext) {
 	}
 	MutexUnlock(&threadContext->stateMutex);
 
-	_changeVideoSync(&threadContext->sync, frameOn);
+	GBASyncSetVideoSync(&threadContext->sync, frameOn);
 }
 
 bool GBAThreadIsPaused(struct GBAThread* threadContext) {
@@ -672,7 +660,7 @@ void GBAThreadTogglePause(struct GBAThread* threadContext) {
 	}
 	MutexUnlock(&threadContext->stateMutex);
 
-	_changeVideoSync(&threadContext->sync, frameOn);
+	GBASyncSetVideoSync(&threadContext->sync, frameOn);
 }
 
 void GBAThreadPauseFromThread(struct GBAThread* threadContext) {
@@ -685,7 +673,7 @@ void GBAThreadPauseFromThread(struct GBAThread* threadContext) {
 	}
 	MutexUnlock(&threadContext->stateMutex);
 
-	_changeVideoSync(&threadContext->sync, frameOn);
+	GBASyncSetVideoSync(&threadContext->sync, frameOn);
 }
 
 #ifdef USE_PTHREADS
@@ -722,113 +710,3 @@ struct GBAThread* GBAThreadGetContext(void) {
 	return 0;
 }
 #endif
-
-void GBASyncPostFrame(struct GBASync* sync) {
-	if (!sync) {
-		return;
-	}
-
-	MutexLock(&sync->videoFrameMutex);
-	++sync->videoFramePending;
-	--sync->videoFrameSkip;
-	if (sync->videoFrameSkip < 0) {
-		do {
-			ConditionWake(&sync->videoFrameAvailableCond);
-			if (sync->videoFrameWait) {
-				ConditionWait(&sync->videoFrameRequiredCond, &sync->videoFrameMutex);
-			}
-		} while (sync->videoFrameWait && sync->videoFramePending);
-	}
-	MutexUnlock(&sync->videoFrameMutex);
-}
-
-void GBASyncForceFrame(struct GBASync* sync) {
-	if (!sync) {
-		return;
-	}
-
-	MutexLock(&sync->videoFrameMutex);
-	ConditionWake(&sync->videoFrameAvailableCond);
-	MutexUnlock(&sync->videoFrameMutex);
-}
-
-bool GBASyncWaitFrameStart(struct GBASync* sync, int frameskip) {
-	if (!sync) {
-		return true;
-	}
-
-	MutexLock(&sync->videoFrameMutex);
-	ConditionWake(&sync->videoFrameRequiredCond);
-	if (!sync->videoFrameOn && !sync->videoFramePending) {
-		return false;
-	}
-	if (sync->videoFrameOn) {
-		if (ConditionWaitTimed(&sync->videoFrameAvailableCond, &sync->videoFrameMutex, 50)) {
-			return false;
-		}
-	}
-	sync->videoFramePending = 0;
-	sync->videoFrameSkip = frameskip;
-	return true;
-}
-
-void GBASyncWaitFrameEnd(struct GBASync* sync) {
-	if (!sync) {
-		return;
-	}
-
-	MutexUnlock(&sync->videoFrameMutex);
-}
-
-bool GBASyncDrawingFrame(struct GBASync* sync) {
-	if (!sync) {
-		return true;
-	}
-
-	return sync->videoFrameSkip <= 0;
-}
-
-void GBASyncSetVideoSync(struct GBASync* sync, bool wait) {
-	if (!sync) {
-		return;
-	}
-
-	_changeVideoSync(sync, wait);
-}
-
-void GBASyncProduceAudio(struct GBASync* sync, bool wait) {
-	if (!sync) {
-		return;
-	}
-
-	if (sync->audioWait && wait) {
-		// TODO loop properly in event of spurious wakeups
-		ConditionWait(&sync->audioRequiredCond, &sync->audioBufferMutex);
-	}
-	MutexUnlock(&sync->audioBufferMutex);
-}
-
-void GBASyncLockAudio(struct GBASync* sync) {
-	if (!sync) {
-		return;
-	}
-
-	MutexLock(&sync->audioBufferMutex);
-}
-
-void GBASyncUnlockAudio(struct GBASync* sync) {
-	if (!sync) {
-		return;
-	}
-
-	MutexUnlock(&sync->audioBufferMutex);
-}
-
-void GBASyncConsumeAudio(struct GBASync* sync) {
-	if (!sync) {
-		return;
-	}
-
-	ConditionWake(&sync->audioRequiredCond);
-	MutexUnlock(&sync->audioBufferMutex);
-}
