@@ -63,6 +63,7 @@ Misc:
  - Qt: Replace pause-after-frame mutex with an atomic
  - Util: Allow disabling the threading code entirely
  - GBA: SIO logging layer
+ - GBA Thread: Split GBASync into a separate file
 
 0.2.1: (2015-05-13)
 Bugfixes:
